fix: left aligned about text in mobile

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -94,7 +94,7 @@
     }
 
     .aboutContent {
-        text-align: center;
+        text-align: left;
         font-size: 1.8rem;
     }
 
@@ -109,7 +109,7 @@
     }
 
     .aboutContent {
-        text-align: center;
+        text-align: left;
         font-size: 1.5rem;
     }
 
