--- a/src/styles/scrolling-banner.module.css
+++ b/src/styles/scrolling-banner.module.css
@@ -43,9 +43,9 @@
 }
 
 @media (max-width: 768px) {
-    .scrollingBanner {
+    /* .scrollingBanner {
         padding: 0.75rem 0;
-    }
+    } */
 
     .scrollingItem {
         font-size: 0.8rem;
